[package]
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"
readme = "README.md"
name = "rs-rtt"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.12"
panic-semihosting = "0.5.3"
alloc-cortex-m = "0.3.5"
spin = "0.5.2"

[dependencies.cortex-m]
version = "0.6.2"
features = ["inline-asm"]

[dependencies.cortex-m-semihosting]
version =  "0.3.5"
features = ["inline-asm"]

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.4.0"

# this lets you use `cargo fix`!
[[bin]]
name = "rs-rtt"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
